// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListContainer does not render ListForm when user has read permissions 1`] = `
<div>
  <a
    class="float-right"
    href="/lists"
  >
    Back to lists
  </a>
  <h1>
    foo
  </h1>
  <br />
  <p>
    You only have permission to read this list
  </p>
  <hr />
  <div
    class="d-flex justify-content-between"
  >
    <h2>
      Items
    </h2>
    <div>
      <div
        class="dropdown"
        data-test-id="filter-dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdown-toggle btn btn-light"
          id="filter-by-category-button"
          type="button"
        >
          Filter by category
        </button>
      </div>
    </div>
  </div>
  <div>
    <div
      class="mb-3 list-group"
    >
      
      <div
        class="list-group-item"
        data-test-class="non-purchased-item"
        style="display: block;"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-12"
          >
            <div
              class="pt-1"
            >
              not purchased quantity no category not purchased product
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="mb-3 list-group"
    >
      <h5
        data-test-class="category-header"
      >
        Bar
      </h5>
      <div
        class="list-group-item"
        data-test-class="non-purchased-item"
        style="display: block;"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-12"
          >
            <div
              class="pt-1"
            >
              not purchased quantity bar not purchased product
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="mb-3 list-group"
    >
      <h5
        data-test-class="category-header"
      >
        Foo
      </h5>
      <div
        class="list-group-item"
        data-test-class="non-purchased-item"
        style="display: block;"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-12"
          >
            <div
              class="pt-1"
            >
              not purchased quantity foo not purchased product
            </div>
          </div>
        </div>
      </div>
      <div
        class="list-group-item"
        data-test-class="non-purchased-item"
        style="display: block;"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-12"
          >
            <div
              class="pt-1"
            >
              not purchased quantity foo not purchased product 2
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <h2>
    Purchased
  </h2>
  <div
    class="mb-3 list-group"
  >
    
    <div
      class="list-group-item"
      data-test-class="purchased-item"
      style="display: block;"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <div
            class="pt-1"
          >
            purchased quantity foo purchased product
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ListContainer does not render complete items when none exist 1`] = `
<div>
  <a
    class="float-right"
    href="/lists"
  >
    Back to lists
  </a>
  <h1>
    foo
  </h1>
  <br />
  <button
    aria-controls="form-collapse"
    aria-expanded="false"
    class="btn btn-link"
    type="button"
  >
    Add Item
  </button>
  <form
    autocomplete="off"
    class="collapse"
    data-test-id="list-item-form"
    id="form-collapse"
    style="padding: 7px;"
  >
    <div
      class="form-group"
    >
      <label
        class="form-label"
        for="product"
      >
        Product
      </label>
      <input
        class="form-control"
        id="product"
        name="product"
        placeholder="apples"
        type="text"
        value=""
      />
      
    </div>
    <div
      class="form-group"
    >
      <label
        class="form-label"
        for="quantity"
      >
        Quantity
      </label>
      <input
        class="form-control"
        id="quantity"
        name="quantity"
        placeholder="3 bags"
        type="text"
        value=""
      />
      
    </div>
    <div
      class="form-group"
    >
      <label
        class="form-label"
        for="category"
      >
        Category
      </label>
      <input
        class="form-control"
        id="category"
        list="categories"
        name="category"
        type="text"
        value=""
      />
      <datalist
        id="categories"
      >
        <option
          value=""
        />
        <option
          value="foo"
        />
        <option
          value="bar"
        />
      </datalist>
      
    </div>
    <br />
    <button
      class="btn btn-success btn-block"
      type="submit"
    >
      Add New Item
    </button>
    <button
      class="btn btn-link btn-block"
      type="button"
    >
      Collapse Form
    </button>
  </form>
  <hr />
  <div
    class="d-flex justify-content-between"
  >
    <h2>
      Items
    </h2>
    <div>
      <div
        class="dropdown"
        data-test-id="filter-dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdown-toggle btn btn-light"
          id="filter-by-category-button"
          type="button"
        >
          Filter by category
        </button>
      </div>
    </div>
  </div>
  <div
    class="clearfix"
  >
    <button
      class="mx-auto float-right btn btn-link"
      type="button"
    >
      
       Select
    </button>
  </div>
  <div>
    <div
      class="mb-3 list-group"
    >
      
      <div
        class="list-group-item"
        data-test-class="non-purchased-item"
        style="display: block;"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-12"
          >
            <div
              class="pt-1"
            >
              not purchased quantity no category not purchased product
            </div>
            <div
              class="float-right btn-group"
              role="group"
            >
              <button
                class="p-0 mr-3 btn btn-link"
                data-test-id="not-purchased-item-complete-2"
                type="button"
              >
                <i
                  class="fa fa-check fa-2x text-success"
                />
              </button>
              <button
                class="p-0 mr-3 btn btn-link"
                data-test-id="not-purchased-item-edit-2"
                type="button"
              >
                <i
                  class="fa fa-edit fa-2x text-warning"
                />
              </button>
              <button
                class="p-0 btn btn-link"
                data-test-id="not-purchased-item-delete-2"
                type="button"
              >
                <i
                  class="fa fa-trash fa-2x text-danger"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="mb-3 list-group"
    >
      <h5
        data-test-class="category-header"
      >
        Bar
      </h5>
      <div
        class="list-group-item"
        data-test-class="non-purchased-item"
        style="display: block;"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-12"
          >
            <div
              class="pt-1"
            >
              not purchased quantity bar not purchased product
            </div>
            <div
              class="float-right btn-group"
              role="group"
            >
              <button
                class="p-0 mr-3 btn btn-link"
                data-test-id="not-purchased-item-complete-5"
                type="button"
              >
                <i
                  class="fa fa-check fa-2x text-success"
                />
              </button>
              <button
                class="p-0 mr-3 btn btn-link"
                data-test-id="not-purchased-item-edit-5"
                type="button"
              >
                <i
                  class="fa fa-edit fa-2x text-warning"
                />
              </button>
              <button
                class="p-0 btn btn-link"
                data-test-id="not-purchased-item-delete-5"
                type="button"
              >
                <i
                  class="fa fa-trash fa-2x text-danger"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="mb-3 list-group"
    >
      <h5
        data-test-class="category-header"
      >
        Foo
      </h5>
      <div
        class="list-group-item"
        data-test-class="non-purchased-item"
        style="display: block;"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-12"
          >
            <div
              class="pt-1"
            >
              not purchased quantity foo not purchased product
            </div>
            <div
              class="float-right btn-group"
              role="group"
            >
              <button
                class="p-0 mr-3 btn btn-link"
                data-test-id="not-purchased-item-complete-3"
                type="button"
              >
                <i
                  class="fa fa-check fa-2x text-success"
                />
              </button>
              <button
                class="p-0 mr-3 btn btn-link"
                data-test-id="not-purchased-item-edit-3"
                type="button"
              >
                <i
                  class="fa fa-edit fa-2x text-warning"
                />
              </button>
              <button
                class="p-0 btn btn-link"
                data-test-id="not-purchased-item-delete-3"
                type="button"
              >
                <i
                  class="fa fa-trash fa-2x text-danger"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="list-group-item"
        data-test-class="non-purchased-item"
        style="display: block;"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-12"
          >
            <div
              class="pt-1"
            >
              not purchased quantity foo not purchased product 2
            </div>
            <div
              class="float-right btn-group"
              role="group"
            >
              <button
                class="p-0 mr-3 btn btn-link"
                data-test-id="not-purchased-item-complete-4"
                type="button"
              >
                <i
                  class="fa fa-check fa-2x text-success"
                />
              </button>
              <button
                class="p-0 mr-3 btn btn-link"
                data-test-id="not-purchased-item-edit-4"
                type="button"
              >
                <i
                  class="fa fa-edit fa-2x text-warning"
                />
              </button>
              <button
                class="p-0 btn btn-link"
                data-test-id="not-purchased-item-delete-4"
                type="button"
              >
                <i
                  class="fa fa-trash fa-2x text-danger"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <h2>
    Purchased
  </h2>
  <div
    class="clearfix"
  >
    <button
      class="mx-auto float-right btn btn-link"
      type="button"
    >
      
       Select
    </button>
  </div>
  <div
    class="mb-3 list-group"
  >
    
  </div>
</div>
`;

exports[`ListContainer does not render incomplete items when none exist 1`] = `
<div>
  <a
    class="float-right"
    href="/lists"
  >
    Back to lists
  </a>
  <h1>
    foo
  </h1>
  <br />
  <button
    aria-controls="form-collapse"
    aria-expanded="false"
    class="btn btn-link"
    type="button"
  >
    Add Item
  </button>
  <form
    autocomplete="off"
    class="collapse"
    data-test-id="list-item-form"
    id="form-collapse"
    style="padding: 7px;"
  >
    <div
      class="form-group"
    >
      <label
        class="form-label"
        for="task"
      >
        Task
      </label>
      <input
        class="form-control"
        id="task"
        name="task"
        placeholder="Clean the toilets"
        type="text"
        value=""
      />
      
    </div>
    <div
      class="form-group"
    >
      <label
        class="form-label"
        for="assigneeId"
      >
        Assignee
      </label>
      <select
        class="form-control"
        id="assigneeId"
        name="assigneeId"
      >
        <option
          disabled=""
          value=""
        >
          Select Assignee
        </option>
        <option
          value="1"
        >
          foo@example.com
        </option>
      </select>
      
    </div>
    <div
      class="form-group"
    >
      <label
        class="form-label"
        for="dueBy"
      >
        Due By
      </label>
      <input
        class="form-control"
        id="dueBy"
        name="dueBy"
        placeholder="mm/dd/yyyy"
        type="date"
        value="2020-05-24"
      />
      
    </div>
    <div
      class="form-group"
    >
      <label
        class="form-label"
        for="category"
      >
        Category
      </label>
      <input
        class="form-control"
        id="category"
        list="categories"
        name="category"
        type="text"
        value=""
      />
      <datalist
        id="categories"
      >
        <option
          value=""
        />
        <option
          value="foo"
        />
        <option
          value="bar"
        />
      </datalist>
      
    </div>
    <br />
    <button
      class="btn btn-success btn-block"
      type="submit"
    >
      Add New Item
    </button>
    <button
      class="btn btn-link btn-block"
      type="button"
    >
      Collapse Form
    </button>
  </form>
  <hr />
  <div
    class="d-flex justify-content-between"
  >
    <h2>
      Items
    </h2>
    <div>
      <button
        class="btn btn-light"
        disabled=""
        style="cursor: not-allowed;"
        type="button"
      >
        Filter by category
      </button>
    </div>
  </div>
  <div
    class="clearfix"
  >
    <button
      class="mx-auto float-right btn btn-link"
      type="button"
    >
      
       Select
    </button>
  </div>
  <div>
    <div
      class="mb-3 list-group"
    >
      
    </div>
  </div>
  <br />
  <h2>
    Completed
  </h2>
  <div
    class="clearfix"
  >
    <button
      class="mx-auto float-right btn btn-link"
      type="button"
    >
      
       Select
    </button>
  </div>
  <div
    class="mb-3 list-group"
  >
    
    <div
      class="list-group-item"
      data-test-class="purchased-item"
      style="display: block;"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <div
            class="pt-1"
          />
          <div
            class="pt-1"
          >
            <small
              class="text-muted"
            >
              <div
                data-test-id="assignee-email"
              />
              <div
                data-test-id="due-by"
              />
            </small>
          </div>
          <div
            class="float-right btn-group"
            role="group"
          >
            <button
              class="p-0 mr-3 btn btn-link"
              data-test-id="purchased-item-refresh-1"
              type="button"
            >
              <i
                class="fa fa-redo fa-2x text-primary"
              />
            </button>
            <button
              class="p-0 mr-3 btn btn-link"
              data-test-id="purchased-item-edit-1"
              disabled=""
              type="button"
            >
              <i
                class="fa fa-edit fa-2x text-warning"
              />
            </button>
            <button
              class="p-0 btn btn-link"
              data-test-id="purchased-item-delete-1"
              type="button"
            >
              <i
                class="fa fa-trash fa-2x text-danger"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ListContainer renders ListForm when user has write permissions 1`] = `
<div>
  <a
    class="float-right"
    href="/lists"
  >
    Back to lists
  </a>
  <h1>
    foo
  </h1>
  <br />
  <button
    aria-controls="form-collapse"
    aria-expanded="false"
    class="btn btn-link"
    type="button"
  >
    Add Item
  </button>
  <form
    autocomplete="off"
    class="collapse"
    data-test-id="list-item-form"
    id="form-collapse"
    style="padding: 7px;"
  >
    <div
      class="form-group"
    >
      <label
        class="form-label"
        for="product"
      >
        Product
      </label>
      <input
        class="form-control"
        id="product"
        name="product"
        placeholder="apples"
        type="text"
        value=""
      />
      
    </div>
    <div
      class="form-group"
    >
      <label
        class="form-label"
        for="quantity"
      >
        Quantity
      </label>
      <input
        class="form-control"
        id="quantity"
        name="quantity"
        placeholder="3 bags"
        type="text"
        value=""
      />
      
    </div>
    <div
      class="form-group"
    >
      <label
        class="form-label"
        for="category"
      >
        Category
      </label>
      <input
        class="form-control"
        id="category"
        list="categories"
        name="category"
        type="text"
        value=""
      />
      <datalist
        id="categories"
      >
        <option
          value=""
        />
        <option
          value="foo"
        />
        <option
          value="bar"
        />
      </datalist>
      
    </div>
    <br />
    <button
      class="btn btn-success btn-block"
      type="submit"
    >
      Add New Item
    </button>
    <button
      class="btn btn-link btn-block"
      type="button"
    >
      Collapse Form
    </button>
  </form>
  <hr />
  <div
    class="d-flex justify-content-between"
  >
    <h2>
      Items
    </h2>
    <div>
      <div
        class="dropdown"
        data-test-id="filter-dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdown-toggle btn btn-light"
          id="filter-by-category-button"
          type="button"
        >
          Filter by category
        </button>
      </div>
    </div>
  </div>
  <div
    class="clearfix"
  >
    <button
      class="mx-auto float-right btn btn-link"
      type="button"
    >
      
       Select
    </button>
  </div>
  <div>
    <div
      class="mb-3 list-group"
    >
      
      <div
        class="list-group-item"
        data-test-class="non-purchased-item"
        style="display: block;"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-12"
          >
            <div
              class="pt-1"
            >
              not purchased quantity no category not purchased product
            </div>
            <div
              class="float-right btn-group"
              role="group"
            >
              <button
                class="p-0 mr-3 btn btn-link"
                data-test-id="not-purchased-item-complete-2"
                type="button"
              >
                <i
                  class="fa fa-check fa-2x text-success"
                />
              </button>
              <button
                class="p-0 mr-3 btn btn-link"
                data-test-id="not-purchased-item-edit-2"
                type="button"
              >
                <i
                  class="fa fa-edit fa-2x text-warning"
                />
              </button>
              <button
                class="p-0 btn btn-link"
                data-test-id="not-purchased-item-delete-2"
                type="button"
              >
                <i
                  class="fa fa-trash fa-2x text-danger"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="mb-3 list-group"
    >
      <h5
        data-test-class="category-header"
      >
        Bar
      </h5>
      <div
        class="list-group-item"
        data-test-class="non-purchased-item"
        style="display: block;"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-12"
          >
            <div
              class="pt-1"
            >
              not purchased quantity bar not purchased product
            </div>
            <div
              class="float-right btn-group"
              role="group"
            >
              <button
                class="p-0 mr-3 btn btn-link"
                data-test-id="not-purchased-item-complete-5"
                type="button"
              >
                <i
                  class="fa fa-check fa-2x text-success"
                />
              </button>
              <button
                class="p-0 mr-3 btn btn-link"
                data-test-id="not-purchased-item-edit-5"
                type="button"
              >
                <i
                  class="fa fa-edit fa-2x text-warning"
                />
              </button>
              <button
                class="p-0 btn btn-link"
                data-test-id="not-purchased-item-delete-5"
                type="button"
              >
                <i
                  class="fa fa-trash fa-2x text-danger"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="mb-3 list-group"
    >
      <h5
        data-test-class="category-header"
      >
        Foo
      </h5>
      <div
        class="list-group-item"
        data-test-class="non-purchased-item"
        style="display: block;"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-12"
          >
            <div
              class="pt-1"
            >
              not purchased quantity foo not purchased product
            </div>
            <div
              class="float-right btn-group"
              role="group"
            >
              <button
                class="p-0 mr-3 btn btn-link"
                data-test-id="not-purchased-item-complete-3"
                type="button"
              >
                <i
                  class="fa fa-check fa-2x text-success"
                />
              </button>
              <button
                class="p-0 mr-3 btn btn-link"
                data-test-id="not-purchased-item-edit-3"
                type="button"
              >
                <i
                  class="fa fa-edit fa-2x text-warning"
                />
              </button>
              <button
                class="p-0 btn btn-link"
                data-test-id="not-purchased-item-delete-3"
                type="button"
              >
                <i
                  class="fa fa-trash fa-2x text-danger"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="list-group-item"
        data-test-class="non-purchased-item"
        style="display: block;"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-12"
          >
            <div
              class="pt-1"
            >
              not purchased quantity foo not purchased product 2
            </div>
            <div
              class="float-right btn-group"
              role="group"
            >
              <button
                class="p-0 mr-3 btn btn-link"
                data-test-id="not-purchased-item-complete-4"
                type="button"
              >
                <i
                  class="fa fa-check fa-2x text-success"
                />
              </button>
              <button
                class="p-0 mr-3 btn btn-link"
                data-test-id="not-purchased-item-edit-4"
                type="button"
              >
                <i
                  class="fa fa-edit fa-2x text-warning"
                />
              </button>
              <button
                class="p-0 btn btn-link"
                data-test-id="not-purchased-item-delete-4"
                type="button"
              >
                <i
                  class="fa fa-trash fa-2x text-danger"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <h2>
    Purchased
  </h2>
  <div
    class="clearfix"
  >
    <button
      class="mx-auto float-right btn btn-link"
      type="button"
    >
      
       Select
    </button>
  </div>
  <div
    class="mb-3 list-group"
  >
    
    <div
      class="list-group-item"
      data-test-class="purchased-item"
      style="display: block;"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <div
            class="pt-1"
          >
            purchased quantity foo purchased product
          </div>
          <div
            class="float-right btn-group"
            role="group"
          >
            <button
              class="p-0 mr-3 btn btn-link"
              data-test-id="purchased-item-refresh-1"
              type="button"
            >
              <i
                class="fa fa-redo fa-2x text-primary"
              />
            </button>
            <button
              class="p-0 mr-3 btn btn-link"
              data-test-id="purchased-item-edit-1"
              disabled=""
              type="button"
            >
              <i
                class="fa fa-edit fa-2x text-warning"
              />
            </button>
            <button
              class="p-0 btn btn-link"
              data-test-id="purchased-item-delete-1"
              type="button"
            >
              <i
                class="fa fa-trash fa-2x text-danger"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ListContainer renders confirmation modal when delete is clicked 1`] = `
<div
  aria-hidden="true"
>
  <a
    class="float-right"
    href="/lists"
  >
    Back to lists
  </a>
  <h1>
    foo
  </h1>
  <br />
  <button
    aria-controls="form-collapse"
    aria-expanded="false"
    class="btn btn-link"
    type="button"
  >
    Add Item
  </button>
  <form
    autocomplete="off"
    class="collapse"
    data-test-id="list-item-form"
    id="form-collapse"
    style="padding: 7px;"
  >
    <div
      class="form-group"
    >
      <label
        class="form-label"
        for="product"
      >
        Product
      </label>
      <input
        class="form-control"
        id="product"
        name="product"
        placeholder="apples"
        type="text"
        value=""
      />
      
    </div>
    <div
      class="form-group"
    >
      <label
        class="form-label"
        for="quantity"
      >
        Quantity
      </label>
      <input
        class="form-control"
        id="quantity"
        name="quantity"
        placeholder="3 bags"
        type="text"
        value=""
      />
      
    </div>
    <div
      class="form-group"
    >
      <label
        class="form-label"
        for="category"
      >
        Category
      </label>
      <input
        class="form-control"
        id="category"
        list="categories"
        name="category"
        type="text"
        value=""
      />
      <datalist
        id="categories"
      >
        <option
          value=""
        />
        <option
          value="foo"
        />
        <option
          value="bar"
        />
      </datalist>
      
    </div>
    <br />
    <button
      class="btn btn-success btn-block"
      type="submit"
    >
      Add New Item
    </button>
    <button
      class="btn btn-link btn-block"
      type="button"
    >
      Collapse Form
    </button>
  </form>
  <hr />
  <div
    class="d-flex justify-content-between"
  >
    <h2>
      Items
    </h2>
    <div>
      <div
        class="dropdown"
        data-test-id="filter-dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdown-toggle btn btn-light"
          id="filter-by-category-button"
          type="button"
        >
          Filter by category
        </button>
      </div>
    </div>
  </div>
  <div
    class="clearfix"
  >
    <button
      class="mx-auto float-right btn btn-link"
      type="button"
    >
      
       Select
    </button>
  </div>
  <div>
    <div
      class="mb-3 list-group"
    >
      
      <div
        class="list-group-item"
        data-test-class="non-purchased-item"
        style="display: block;"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-12"
          >
            <div
              class="pt-1"
            >
              not purchased quantity no category not purchased product
            </div>
            <div
              class="float-right btn-group"
              role="group"
            >
              <button
                class="p-0 mr-3 btn btn-link"
                data-test-id="not-purchased-item-complete-2"
                type="button"
              >
                <i
                  class="fa fa-check fa-2x text-success"
                />
              </button>
              <button
                class="p-0 mr-3 btn btn-link"
                data-test-id="not-purchased-item-edit-2"
                type="button"
              >
                <i
                  class="fa fa-edit fa-2x text-warning"
                />
              </button>
              <button
                class="p-0 btn btn-link"
                data-test-id="not-purchased-item-delete-2"
                type="button"
              >
                <i
                  class="fa fa-trash fa-2x text-danger"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="mb-3 list-group"
    >
      <h5
        data-test-class="category-header"
      >
        Bar
      </h5>
      <div
        class="list-group-item"
        data-test-class="non-purchased-item"
        style="display: block;"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-12"
          >
            <div
              class="pt-1"
            >
              not purchased quantity bar not purchased product
            </div>
            <div
              class="float-right btn-group"
              role="group"
            >
              <button
                class="p-0 mr-3 btn btn-link"
                data-test-id="not-purchased-item-complete-5"
                type="button"
              >
                <i
                  class="fa fa-check fa-2x text-success"
                />
              </button>
              <button
                class="p-0 mr-3 btn btn-link"
                data-test-id="not-purchased-item-edit-5"
                type="button"
              >
                <i
                  class="fa fa-edit fa-2x text-warning"
                />
              </button>
              <button
                class="p-0 btn btn-link"
                data-test-id="not-purchased-item-delete-5"
                type="button"
              >
                <i
                  class="fa fa-trash fa-2x text-danger"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="mb-3 list-group"
    >
      <h5
        data-test-class="category-header"
      >
        Foo
      </h5>
      <div
        class="list-group-item"
        data-test-class="non-purchased-item"
        style="display: block;"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-12"
          >
            <div
              class="pt-1"
            >
              not purchased quantity foo not purchased product
            </div>
            <div
              class="float-right btn-group"
              role="group"
            >
              <button
                class="p-0 mr-3 btn btn-link"
                data-test-id="not-purchased-item-complete-3"
                type="button"
              >
                <i
                  class="fa fa-check fa-2x text-success"
                />
              </button>
              <button
                class="p-0 mr-3 btn btn-link"
                data-test-id="not-purchased-item-edit-3"
                type="button"
              >
                <i
                  class="fa fa-edit fa-2x text-warning"
                />
              </button>
              <button
                class="p-0 btn btn-link"
                data-test-id="not-purchased-item-delete-3"
                type="button"
              >
                <i
                  class="fa fa-trash fa-2x text-danger"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="list-group-item"
        data-test-class="non-purchased-item"
        style="display: block;"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-12"
          >
            <div
              class="pt-1"
            >
              not purchased quantity foo not purchased product 2
            </div>
            <div
              class="float-right btn-group"
              role="group"
            >
              <button
                class="p-0 mr-3 btn btn-link"
                data-test-id="not-purchased-item-complete-4"
                type="button"
              >
                <i
                  class="fa fa-check fa-2x text-success"
                />
              </button>
              <button
                class="p-0 mr-3 btn btn-link"
                data-test-id="not-purchased-item-edit-4"
                type="button"
              >
                <i
                  class="fa fa-edit fa-2x text-warning"
                />
              </button>
              <button
                class="p-0 btn btn-link"
                data-test-id="not-purchased-item-delete-4"
                type="button"
              >
                <i
                  class="fa fa-trash fa-2x text-danger"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <h2>
    Purchased
  </h2>
  <div
    class="clearfix"
  >
    <button
      class="mx-auto float-right btn btn-link"
      type="button"
    >
      
       Select
    </button>
  </div>
  <div
    class="mb-3 list-group"
  >
    
    <div
      class="list-group-item"
      data-test-class="purchased-item"
      style="display: block;"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <div
            class="pt-1"
          >
            purchased quantity foo purchased product
          </div>
          <div
            class="float-right btn-group"
            role="group"
          >
            <button
              class="p-0 mr-3 btn btn-link"
              data-test-id="purchased-item-refresh-1"
              type="button"
            >
              <i
                class="fa fa-redo fa-2x text-primary"
              />
            </button>
            <button
              class="p-0 mr-3 btn btn-link"
              data-test-id="purchased-item-edit-1"
              disabled=""
              type="button"
            >
              <i
                class="fa fa-edit fa-2x text-warning"
              />
            </button>
            <button
              class="p-0 btn btn-link"
              data-test-id="purchased-item-delete-1"
              type="button"
            >
              <i
                class="fa fa-trash fa-2x text-danger"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ListContainer renders filtered items without category buckets when filter exists 1`] = `
<div>
  <a
    class="float-right"
    href="/lists"
  >
    Back to lists
  </a>
  <h1>
    foo
  </h1>
  <br />
  <button
    aria-controls="form-collapse"
    aria-expanded="false"
    class="btn btn-link"
    type="button"
  >
    Add Item
  </button>
  <form
    autocomplete="off"
    class="collapse"
    data-test-id="list-item-form"
    id="form-collapse"
    style="padding: 7px;"
  >
    <div
      class="form-group"
    >
      <label
        class="form-label"
        for="product"
      >
        Product
      </label>
      <input
        class="form-control"
        id="product"
        name="product"
        placeholder="apples"
        type="text"
        value=""
      />
      
    </div>
    <div
      class="form-group"
    >
      <label
        class="form-label"
        for="quantity"
      >
        Quantity
      </label>
      <input
        class="form-control"
        id="quantity"
        name="quantity"
        placeholder="3 bags"
        type="text"
        value=""
      />
      
    </div>
    <div
      class="form-group"
    >
      <label
        class="form-label"
        for="category"
      >
        Category
      </label>
      <input
        class="form-control"
        id="category"
        list="categories"
        name="category"
        type="text"
        value=""
      />
      <datalist
        id="categories"
      >
        <option
          value=""
        />
        <option
          value="foo"
        />
        <option
          value="bar"
        />
      </datalist>
      
    </div>
    <br />
    <button
      class="btn btn-success btn-block"
      type="submit"
    >
      Add New Item
    </button>
    <button
      class="btn btn-link btn-block"
      type="button"
    >
      Collapse Form
    </button>
  </form>
  <hr />
  <div
    class="d-flex justify-content-between"
  >
    <h2>
      Items
    </h2>
    <div>
      <span
        style="line-height: 2.5rem; margin-right: 1rem;"
      >
        Filtering by:
      </span>
      <button
        class="btn btn-outline-primary"
        data-test-id="clear-filter"
        style="margin-right: 1rem;"
        type="button"
      >
        foo
         
        <i
          class="fa fa-trash"
        />
      </button>
    </div>
  </div>
  <div
    class="clearfix"
  >
    <button
      class="mx-auto float-right btn btn-link"
      type="button"
    >
      
       Select
    </button>
  </div>
  <div>
    <div
      class="mb-3 list-group"
    >
      <h5
        data-test-class="category-header"
      >
        Foo
      </h5>
      <div
        class="list-group-item"
        data-test-class="non-purchased-item"
        style="display: block;"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-12"
          >
            <div
              class="pt-1"
            >
              not purchased quantity foo not purchased product
            </div>
            <div
              class="float-right btn-group"
              role="group"
            >
              <button
                class="p-0 mr-3 btn btn-link"
                data-test-id="not-purchased-item-complete-3"
                type="button"
              >
                <i
                  class="fa fa-check fa-2x text-success"
                />
              </button>
              <button
                class="p-0 mr-3 btn btn-link"
                data-test-id="not-purchased-item-edit-3"
                type="button"
              >
                <i
                  class="fa fa-edit fa-2x text-warning"
                />
              </button>
              <button
                class="p-0 btn btn-link"
                data-test-id="not-purchased-item-delete-3"
                type="button"
              >
                <i
                  class="fa fa-trash fa-2x text-danger"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="list-group-item"
        data-test-class="non-purchased-item"
        style="display: block;"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-12"
          >
            <div
              class="pt-1"
            >
              not purchased quantity foo not purchased product 2
            </div>
            <div
              class="float-right btn-group"
              role="group"
            >
              <button
                class="p-0 mr-3 btn btn-link"
                data-test-id="not-purchased-item-complete-4"
                type="button"
              >
                <i
                  class="fa fa-check fa-2x text-success"
                />
              </button>
              <button
                class="p-0 mr-3 btn btn-link"
                data-test-id="not-purchased-item-edit-4"
                type="button"
              >
                <i
                  class="fa fa-edit fa-2x text-warning"
                />
              </button>
              <button
                class="p-0 btn btn-link"
                data-test-id="not-purchased-item-delete-4"
                type="button"
              >
                <i
                  class="fa fa-trash fa-2x text-danger"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <h2>
    Purchased
  </h2>
  <div
    class="clearfix"
  >
    <button
      class="mx-auto float-right btn btn-link"
      type="button"
    >
      
       Select
    </button>
  </div>
  <div
    class="mb-3 list-group"
  >
    
    <div
      class="list-group-item"
      data-test-class="purchased-item"
      style="display: block;"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <div
            class="pt-1"
          >
            purchased quantity foo purchased product
          </div>
          <div
            class="float-right btn-group"
            role="group"
          >
            <button
              class="p-0 mr-3 btn btn-link"
              data-test-id="purchased-item-refresh-1"
              type="button"
            >
              <i
                class="fa fa-redo fa-2x text-primary"
              />
            </button>
            <button
              class="p-0 mr-3 btn btn-link"
              data-test-id="purchased-item-edit-1"
              disabled=""
              type="button"
            >
              <i
                class="fa fa-edit fa-2x text-warning"
              />
            </button>
            <button
              class="p-0 btn btn-link"
              data-test-id="purchased-item-delete-1"
              type="button"
            >
              <i
                class="fa fa-trash fa-2x text-danger"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ListContainer renders items with category buckets when includedCategories is not empty and no filter is applied 1`] = `
<div>
  <a
    class="float-right"
    href="/lists"
  >
    Back to lists
  </a>
  <h1>
    foo
  </h1>
  <br />
  <button
    aria-controls="form-collapse"
    aria-expanded="false"
    class="btn btn-link"
    type="button"
  >
    Add Item
  </button>
  <form
    autocomplete="off"
    class="collapse"
    data-test-id="list-item-form"
    id="form-collapse"
    style="padding: 7px;"
  >
    <div
      class="form-group"
    >
      <label
        class="form-label"
        for="product"
      >
        Product
      </label>
      <input
        class="form-control"
        id="product"
        name="product"
        placeholder="apples"
        type="text"
        value=""
      />
      
    </div>
    <div
      class="form-group"
    >
      <label
        class="form-label"
        for="quantity"
      >
        Quantity
      </label>
      <input
        class="form-control"
        id="quantity"
        name="quantity"
        placeholder="3 bags"
        type="text"
        value=""
      />
      
    </div>
    <div
      class="form-group"
    >
      <label
        class="form-label"
        for="category"
      >
        Category
      </label>
      <input
        class="form-control"
        id="category"
        list="categories"
        name="category"
        type="text"
        value=""
      />
      <datalist
        id="categories"
      >
        <option
          value=""
        />
        <option
          value="foo"
        />
        <option
          value="bar"
        />
      </datalist>
      
    </div>
    <br />
    <button
      class="btn btn-success btn-block"
      type="submit"
    >
      Add New Item
    </button>
    <button
      class="btn btn-link btn-block"
      type="button"
    >
      Collapse Form
    </button>
  </form>
  <hr />
  <div
    class="d-flex justify-content-between"
  >
    <h2>
      Items
    </h2>
    <div>
      <div
        class="dropdown"
        data-test-id="filter-dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="dropdown-toggle btn btn-light"
          id="filter-by-category-button"
          type="button"
        >
          Filter by category
        </button>
      </div>
    </div>
  </div>
  <div
    class="clearfix"
  >
    <button
      class="mx-auto float-right btn btn-link"
      type="button"
    >
      
       Select
    </button>
  </div>
  <div>
    <div
      class="mb-3 list-group"
    >
      
      <div
        class="list-group-item"
        data-test-class="non-purchased-item"
        style="display: block;"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-12"
          >
            <div
              class="pt-1"
            >
              not purchased quantity no category not purchased product
            </div>
            <div
              class="float-right btn-group"
              role="group"
            >
              <button
                class="p-0 mr-3 btn btn-link"
                data-test-id="not-purchased-item-complete-2"
                type="button"
              >
                <i
                  class="fa fa-check fa-2x text-success"
                />
              </button>
              <button
                class="p-0 mr-3 btn btn-link"
                data-test-id="not-purchased-item-edit-2"
                type="button"
              >
                <i
                  class="fa fa-edit fa-2x text-warning"
                />
              </button>
              <button
                class="p-0 btn btn-link"
                data-test-id="not-purchased-item-delete-2"
                type="button"
              >
                <i
                  class="fa fa-trash fa-2x text-danger"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="mb-3 list-group"
    >
      <h5
        data-test-class="category-header"
      >
        Bar
      </h5>
      <div
        class="list-group-item"
        data-test-class="non-purchased-item"
        style="display: block;"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-12"
          >
            <div
              class="pt-1"
            >
              not purchased quantity bar not purchased product
            </div>
            <div
              class="float-right btn-group"
              role="group"
            >
              <button
                class="p-0 mr-3 btn btn-link"
                data-test-id="not-purchased-item-complete-5"
                type="button"
              >
                <i
                  class="fa fa-check fa-2x text-success"
                />
              </button>
              <button
                class="p-0 mr-3 btn btn-link"
                data-test-id="not-purchased-item-edit-5"
                type="button"
              >
                <i
                  class="fa fa-edit fa-2x text-warning"
                />
              </button>
              <button
                class="p-0 btn btn-link"
                data-test-id="not-purchased-item-delete-5"
                type="button"
              >
                <i
                  class="fa fa-trash fa-2x text-danger"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="mb-3 list-group"
    >
      <h5
        data-test-class="category-header"
      >
        Foo
      </h5>
      <div
        class="list-group-item"
        data-test-class="non-purchased-item"
        style="display: block;"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-12"
          >
            <div
              class="pt-1"
            >
              not purchased quantity foo not purchased product
            </div>
            <div
              class="float-right btn-group"
              role="group"
            >
              <button
                class="p-0 mr-3 btn btn-link"
                data-test-id="not-purchased-item-complete-3"
                type="button"
              >
                <i
                  class="fa fa-check fa-2x text-success"
                />
              </button>
              <button
                class="p-0 mr-3 btn btn-link"
                data-test-id="not-purchased-item-edit-3"
                type="button"
              >
                <i
                  class="fa fa-edit fa-2x text-warning"
                />
              </button>
              <button
                class="p-0 btn btn-link"
                data-test-id="not-purchased-item-delete-3"
                type="button"
              >
                <i
                  class="fa fa-trash fa-2x text-danger"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="list-group-item"
        data-test-class="non-purchased-item"
        style="display: block;"
      >
        <div
          class="row"
        >
          <div
            class="col-sm-12 col-12"
          >
            <div
              class="pt-1"
            >
              not purchased quantity foo not purchased product 2
            </div>
            <div
              class="float-right btn-group"
              role="group"
            >
              <button
                class="p-0 mr-3 btn btn-link"
                data-test-id="not-purchased-item-complete-4"
                type="button"
              >
                <i
                  class="fa fa-check fa-2x text-success"
                />
              </button>
              <button
                class="p-0 mr-3 btn btn-link"
                data-test-id="not-purchased-item-edit-4"
                type="button"
              >
                <i
                  class="fa fa-edit fa-2x text-warning"
                />
              </button>
              <button
                class="p-0 btn btn-link"
                data-test-id="not-purchased-item-delete-4"
                type="button"
              >
                <i
                  class="fa fa-trash fa-2x text-danger"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <h2>
    Purchased
  </h2>
  <div
    class="clearfix"
  >
    <button
      class="mx-auto float-right btn btn-link"
      type="button"
    >
      
       Select
    </button>
  </div>
  <div
    class="mb-3 list-group"
  >
    
    <div
      class="list-group-item"
      data-test-class="purchased-item"
      style="display: block;"
    >
      <div
        class="row"
      >
        <div
          class="col-sm-12 col-12"
        >
          <div
            class="pt-1"
          >
            purchased quantity foo purchased product
          </div>
          <div
            class="float-right btn-group"
            role="group"
          >
            <button
              class="p-0 mr-3 btn btn-link"
              data-test-id="purchased-item-refresh-1"
              type="button"
            >
              <i
                class="fa fa-redo fa-2x text-primary"
              />
            </button>
            <button
              class="p-0 mr-3 btn btn-link"
              data-test-id="purchased-item-edit-1"
              disabled=""
              type="button"
            >
              <i
                class="fa fa-edit fa-2x text-warning"
              />
            </button>
            <button
              class="p-0 btn btn-link"
              data-test-id="purchased-item-delete-1"
              type="button"
            >
              <i
                class="fa fa-trash fa-2x text-danger"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
